Refactor add fund page

--- a/FundMon/FundMon.csproj
+++ b/FundMon/FundMon.csproj
@@ -67,4 +67,7 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Themes\" />
+  </ItemGroup>
 </Project>
