--- a/FundMon/FundMon.csproj
+++ b/FundMon/FundMon.csproj
@@ -17,6 +17,7 @@
     <AssemblyName>FundMon</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Controls\FundAddModal.xaml" />
     <None Remove="Controls\LineChart.xaml" />
     <None Remove="Controls\PortfolioEditModal.xaml" />
     <None Remove="Pages\FundChart.xaml" />
@@ -70,6 +71,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Themes\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Controls\FundAddModal.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="Controls\PortfolioEditModal.xaml">
